--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include ckanext/odm_library/fanstatic *
-recursive-include ckanext/odm_library/lib *
-recursive-include ckanext/odm_library/templates *
+recursive-include ckanext/odm_laws/fanstatic *
+recursive-include ckanext/odm_laws/lib *
+recursive-include ckanext/odm_laws/templates *
