--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include ckanext/odm_laws/fanstatic *
 recursive-include ckanext/odm_laws/lib *
 recursive-include ckanext/odm_laws/templates *
+recursive-include ckanext *.html *.json
