--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,10 @@ indent_size = 2
 [*.json]
 indent_size = 2
 
+[*.html]
+indent_size = 2
+indent_style = tab
+
 [*.py]
 indent_size = 2
 indent_style = tab
