--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include ckanext/odm_laws/fanstatic *
 recursive-include ckanext/odm_laws/lib *
 recursive-include ckanext/odm_laws/templates *
+recursive-include ckanext/odm_laws/i18n *
 recursive-include ckanext *.html *.json
